# cccc-sdk

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  RELEASING.md
.github/workflows/: python-ci.yml  python-integration.yml  python-publish-testpypi.yml  python-publish.yml  ts-ci.yml  ts-publish-npm.yml
python/: README.md  pyproject.toml
python/examples/: auto_ack_attention.py  compat_check.py  context_add_note.py  ping.py  send.py  send_cross_group.py  stream.py
python/examples/werewolf/: __init__.py  ai_player.py  config.py  game.py  main.py  message_bus.py  prompts.py  roles.py
python/src/cccc_sdk/: __init__.py  client.py  errors.py  transport.py
python/tests/: test_client_contract_parity.py  test_transport.py
scripts/: sync_specs_from_cccc.sh
spec/: CCCC_DAEMON_IPC_V1.md
ts/: DESIGN.md  README.md  package-lock.json  package.json  tsconfig.json
ts/__tests__/: client.contract.test.ts  errors.test.ts  transport.test.ts
ts/examples/: ping.ts  send.ts  stream.ts  tsconfig.json
ts/src/: client.ts  errors.ts  index.ts  transport.ts  types.ts
