[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cccc-sdk"
version = "0.4.0rc1"
description = "Client SDK for the CCCC daemon (IPC v1)"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["cccc", "sdk", "ipc", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Source = "https://github.com/ChesterRa/cccc-sdk"
Issues = "https://github.com/ChesterRa/cccc-sdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cccc_sdk = ["py.typed"]
